# Epitech

Tek1/A.I/Need4Stek/: Makefile
Tek1/CPE/Bsq/: .gitignore  .gitlab-ci.yml  Makefile  functional_tests.sh  main.c
Tek1/CPE/LemIn/: .gitignore  .gitlab-ci.yml  Makefile
Tek1/CPE/MatchStick/: .gitignore  .gitlab-ci.yml  Makefile  main.c  readme.md
Tek1/CPE/PushSwap/: .gitignore  .gitlab-ci.yml  Makefile  main.c  push_swap_cor.pl  readme.md
Tek1/CPool/Day01/: mr_clean
Tek1/CPool/Day02/: count_files.sh
Tek1/CPool/Day03/: my_print_alpha.c  my_print_comb2.c
Tek1/CPool/Day04/: my_evil_str.c  my_sort_int_array.c
Tek1/CPool/Day05/: my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c
Tek1/CPool/Day06/: .gitignore  my_strcmp.c  my_strcpy.c
Tek1/CPool/Day07/: my_strcat.c
Tek1/CPool/Day08/: my_strdup.c
Tek1/CPool/Day09/: my_params_to_array.c  swap_endian_color.c
Tek1/CPool/Day10/: my_sort_word_array.c
Tek1/CPool/InfinAdd/: Infinit_add.c  addition.c  soustraction.c
Tek1/CPool/MatchNmatch/: nmatch.c
Tek1/CPool/Rush-1/: .gitignore
Tek1/CPool/Rush-2/: count_alpha.c  rush2.c
Tek1/C_Pool/Day01/: prepare_my_repo.sh  push_that.sh
Tek1/C_Pool/Day02/: gotta_catch_them_all.sh  looneytised.sh  r_tacpy.sh
Tek1/C_Pool/Day03/: .gitignore  my_isneg.c  my_print_comb.c  my_print_combn.c  my_print_digits.c  my_print_revalpha.c
Tek1/C_Pool/Day04/: .gitignore
Tek1/C_Pool/Day05/: .gitignore
Tek1/C_Pool/Day06/: my_strncpy.c
Tek1/C_Pool/Day07/: .gitignore  my_strncat.c
Tek2/CPP_Pool/Day10/ex01/: AEnemy.cpp  AEnemy.hpp  AWeapon.cpp  AWeapon.hpp  CMakeLists.txt  Character.cpp  Character.hpp  PlasmaRifle.cpp  PlasmaRifle.hpp  PowerFist.cpp  PowerFist.hpp  RadScorpion.cpp  RadScorpion.hpp  SuperMutant.cpp  SuperMutant.hpp
Tek2/CPP_Pool/Day14-M/ex00/: CMakeLists.txt  Fruit.cpp  Fruit.hpp  FruitBox.cpp  FruitBox.hpp  FruitNode.hpp  Lemon.cpp  Lemon.hpp
Tek2/CPP_Pool/Day14-M/ex01/: Banana.cpp  Banana.hpp  CMakeLists.txt  Fruit.cpp  Fruit.hpp  FruitBox.cpp  FruitBox.hpp  Lemon.cpp  Lemon.hpp  Lime.cpp  Lime.hpp  LittleHand.cpp  LittleHand.hpp
Tek2/Network_Programming/MyTeams/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  readme.md
Tek2/Network_Programming/MyTeams/cli/: Makefile
Tek2/Network_Programming/MyTeams/cli/includes/: my_teams.h  network.h
Tek2/Network_Programming/MyTeams/cli/src/: main.c
Tek2/Network_Programming/MyTeams/cli/src/core/: loop.c  prompt.c
Tek2/Network_Programming/MyTeams/cli/src/core/local/: dispatch.c
Tek2/Network_Programming/MyTeams/cli/src/core/local/commands/: command_log.c  command_ping.c  command_quit.c  commands.c
Tek2/Network_Programming/MyTeams/cli/src/core/server/: dispatch.c  send.c
Tek2/Network_Programming/MyTeams/cli/src/core/server/commands/: command_error.c  command_message.c  command_pong.c  command_users.c
Tek2/Network_Programming/MyTeams/cli/src/network/: bind.c  init.c  recv.c  send.c  setup.c
Tek2/Network_Programming/MyTeams/cli/src/utils/: error_handling.c  parse_str.c  usage.c
Tek2/Network_Programming/MyTeams/server/: Makefile
Tek2/Network_Programming/MyTeams/server/includes/: errors.h  my_teams.h  network.h  private_messages.h  sessions.h  teams.h
Tek2/Network_Programming/MyTeams/server/src/: main.c
Tek2/Network_Programming/MyTeams/server/src/core/: create.c  dispatch.c  info.c  list.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/: cmd_ping.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/private_messages/: cmd_messages.c  cmd_send.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/private_messages/utils/: conversations_list.c  messages_list.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/sessions/: cmd_info.c  cmd_login.c  cmd_logout.c  cmd_user.c  cmd_users.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/sessions/utils/: list.c  user.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/teams/: cmd_create.c  cmd_info.c  cmd_list.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/teams/subscribers/: cmd_list.c  cmd_subscribe.c  cmd_unsubscribe.c
Tek2/Network_Programming/MyTeams/server/src/core/commands/teams/utils/: teams_list.c
Tek2/Network_Programming/MyTeams/server/src/core/middleware/: auth.c
Tek2/Network_Programming/MyTeams/server/src/core/response/: sendto.c
Tek2/Network_Programming/MyTeams/server/src/network/: client.c  init.c  server.c
Tek2/Network_Programming/MyTeams/server/src/utils/: clean_cmd.c  cmd_parsing.c  error_handling.c  parse_str.c  rfc_str.c  usage.c  uuid.c
Tek2/Network_Programming/MyTeams/server/tests/: test_parsing_command.c
(+1109 files in other folders)
